--- a/src/ex1/style.css
+++ b/src/ex1/style.css
@@ -3,13 +3,25 @@
 }
 
 body {
-  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+  background-color: cornflowerblue;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  margin: 8px 6px;
+  border-radius: 3px;
+  position: absolute;
+  right: 10px;
 }
 
 .background {
-  min-height: 100vh;
   background: cadetblue;
+  min-height: 100vh;
 }
 
 .content {
@@ -19,67 +31,66 @@ body {
   min-height: 500px;
   width: 400px;
   position: absolute;
-  top: 50%;
+  top: 6%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   box-shadow: 0 0 4px #000000;
 }
 
-.todo {
+.todoInput {
   width: 85%;
   padding: 12px 20px;
   margin: 8px 0;
 }
 
 .addButton {
-  cursor: pointer;
-  background-color: cornflowerblue;
-  border: none;
-  color: white;
-  padding: 8px 16px;
-  margin: 8px 6px;
   font-size: 24px;
-  border-radius: 2px;
-  position: absolute;
-  right: 10px;
 }
 
-.middle {
+.todos {
   margin: 0;
   padding: 0;
 }
 
-p {
+.todo {
   cursor: pointer;
   position: relative;
   padding: 12px 8px 12px 40px;
+  margin: 8px 0;
   background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-  border-radius: 2px;
+  font-size: 16px;
+  border-radius: 3px;
 }
 
-p:hover {
+.todo:hover {
   background: #ddd;
 }
 
+.delete {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.delete:hover {
+  background-color: firebrick;
+  color: white;
+  border-radius: 0 3px 3px 0;
+}
+
+.bottom {
+  padding: 20px;
+}
+
 .pending {
+  margin: 8px 6px;
   position: absolute;
   left: 10px;
   bottom: 16px;
-  margin: 8px 6px;
 }
 
-.clearButton {
-  cursor: pointer;
-  background-color: cornflowerblue;
-  border: none;
-  color: white;
-  padding: 8px 16px;
-  margin: 8px 6px;
+.clearAllButton {
   font-size: 16px;
-  border-radius: 2px;
-  position: absolute;
-  right: 10px;
   bottom: 10px;
 }
